--- a/index.html
+++ b/index.html
@@ -4,22 +4,25 @@
     <meta charset="UTF-8">
     <title>ByteCoin Clicker</title>
     <link rel="icon" type="image/png" href="images/favicon.png">
-    <link  rel="stylesheet" id="style" type="text/css" href="css/day.css">
+    <link rel="stylesheet" id="style" type="text/css" href="css/day.css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script> <!--Austauschen durch lokale Version-->
-    
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script> <!--Austauschen durch lokale Version-->
+    <script src="js/jquery.scrollbar.js"></script>
+    <script src="js/upgrade.js"></script>
+    <script src="js/videocard.js"></script>
     <script src="js/scripts.js"></script>
-</head>
+    <link rel="stylesheet" type="text/css" href="css/jquery.scrollbar.css">
 <body onload="loadCache()">
     <header id="topbar">
         <a href="https://bytecoin.org"><img id="logo" src="images/favicon.png"></a>
         <div id="dayMusic">
             <p id="volume" title="Stumm/Laut" onclick="changeVolume()"><i id="volumes" class="fas fa-volume-up"></i></p>
-            <p id="dayNight" title="Nachtmodus/Tagmodus" style="color: white;" onclick="changeDayNight()"><i id="dayNightSwitch" class="fas fa-sun"></i></p>
+            <p id="dayNight" title="Nachtmodus/Tagmodus"  onclick="changeDayNight()"><i id="dayNightSwitch" class="fas fa-sun"></i></p>
         </div>
         <nav id="leftNav">
             <ul>
-                <li id="amount" onclick="addCoins(10000)">ByteCoins: 0</li>
+                <li id="amount" onclick="addCoins(1000000)">ByteCoins: 0</li>
                 <li id="amountSecond">Coins Per Second: 0</li>
                 <li id="coinsPerClick">Coins Per Click: 1</li>
             </ul>
@@ -28,51 +31,42 @@
     <div id="clickCenter">
         <img id="clickPicture" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
     </div>
-    <p id="upgradeHeader" class="noselect" onclick="toogleUpgradeMenu()">Upgrades&#11206</p>
-    <div id="upgradeField" style="display:none">
-        <div class="upgradeFields notAffordable" title="KTX1030Ti" onclick="buyUpgrade('KTX1030Ti')">
-            <p class="upgradeNames">KTX 1030Ti x0 200 &#8383;</p>
-            <span class="tooltip" data-tooltip="Erhöht die Coins pro Sekunde um 1"></span>
-            <img class="upgradeImages noselect" src="images/KTX1030Ti_Upgrade.png" alt="KTX 1030Ti Upgrade">
-            <p class="upgradePrice">200 1.3</p>
-            <p class="upgradeMechanic" title="1">2</p>
+    <div id="statsPage" class="invisible">
+        <h1 id="statisticsHeader">Statistics</h1>
+        <ul id="statisticsList">
+            <li class="stat" title="coinsEver">Mined ByteCoins ever: 0</li>
+            <li class="stat" title="coinsCurrent">ByteCoins in the Bank: 0</li>
+            <li class="stat" title="coinsClicked">Selfmined Coins: 0</li>
+            <li class="stat" title="coinsClicks">Coinclicks: 0</li>
+            <li class="stat" title="time">Playing for 0</li>
+            <li class="stat" title="boughtVideocards">Bought Videocards: 0</li>
+        </ul>
+    </div>
+    <div id="shopPage" class="invisible">
+        <h1 id="shopHeader">Shop</h1>
+        <div class="shop" id="videocardsShop">
+            <p class="shopHeaders">GPU</p>
+            <ul class="shopContent" id="videocardsShopContent">
+            </ul>
         </div>
-        <div class="upgradeFields notAffordable" title="KT1020" onclick="buyUpgrade('KT1020')">
-            <p class="upgradeNames">KT 1020 x0 70 &#8383;</p>
-            <span class="tooltip" data-tooltip="Erhöht die Coins pro Sekunde um 0.1"></span>
-            <img class="upgradeImages noselect" src="images/KT1020_Upgrade.png" alt="KT 1020 Upgrade">
-            <p class="upgradePrice">70 1.15</p>
-            <p class="upgradeMechanic" title="1">0.1</p>
+        <div class="shop" id="upgradesShop">
+            <p class="shopHeaders">Upgrades</p>
+            <ul class="shopContent" id="upgradesShopContent">
+            </ul>
         </div>
-        <div class="upgradeFields notAffordable" title="ES" onclick="buyUpgrade('ES')">
-            <p class="upgradeNames">Eisenspitzhacke 100 &#8383;</p>
-            <span class="tooltip" data-tooltip="Verdoppelt die Coins pro Klick"></span>
-            <img class="upgradeImages noselect" src="images/iron_pickaxeUprade.png" alt="Eisenspitzhacke Upgrade">
-            <p class="upgradePrice">100 0</p>
-            <p class="upgradeMechanic" title="2">2</p>
-        </div>
-        <div class="upgradeFields notAffordable" title="GS" onclick="buyUpgrade('GS')">
-            <p class="upgradeNames">Goldspitzhacke 1000 &#8383;</p>
-            <span class="tooltip" data-tooltip="Verdoppelt die Coins pro Klick"></span>
-            <img class="upgradeImages noselect" src="images/gold_pickaxeUpgrade.png" alt="Goldspitzhacke Upgrade">
-            <p class="upgradePrice">1000 0 </p>
-            <p class="upgradeMechanic" title="2">2</p>
-        </div>
-        <div class="upgradeFields notAffordable" title="OCKTX1030Ti" onclick="buyUpgrade('OCKTX1030Ti')">
-            <p class="upgradeNames">OC KTX 1030Ti 2000 &#8383;</p>
-            <span class="tooltip" data-tooltip="Verdoppelt die Coins pro Sekunde der KTX 1030Ti"></span>
-            <img class="upgradeImages noselect" src="images/overclockUpgrade.png" alt="Overclock">
-            <p class="upgradePrice">2000 0</p>
-            <p class="upgradeMechanic" title="3">2 KTX1030Ti</p>
-        </div>
-        <div class="upgradeFields notAffordable" title="OCKT1020" onclick="buyUpgrade('OCKT1020')">
-            <p class="upgradeNames">OC KT 1020 1000 &#8383;</p>
-            <span class="tooltip" data-tooltip="Verdoppelt die Coins pro Sekunde der KT 1020"></span>
-            <img class="upgradeImages noselect" src="images/overclockUpgrade.png" alt="Overclock">
-            <p class="upgradePrice">1000 0</p>
-            <p class="upgradeMechanic" title="3">2 KT1020</p>
+        <div class="shop" id="overclockShop">
+            <p class="shopHeaders">OC</p>
+            <ul class="shopContent" id="overclockShopContent">
+            </ul>
         </div>
     </div>
     <audio id="audioplayer"></audio>
+    <footer id="bottomBar">
+        <ul id="pagesList">
+            <li id="statsShow" onclick="togglePage('statsPage')">Statistics</li>
+            <li onclick="togglePage('shopPage')">Shop</li>
+            <li onclick="test()">About</li>
+        </ul>
+    </footer>
 </body>
 </html>
