--- a/index_mobile.html
+++ b/index_mobile.html
@@ -21,7 +21,7 @@
 <header id="topbar">
     <nav id="leftNav">
         <ul>
-            <li id="amount" onclick="addCoins(1000000)">ByteCoins: 0</li>
+            <li id="amount">ByteCoins: 0</li>
             <li id="amountSecond">Coins Per Second: 0</li>
             <li id="coinsPerClick">Coins Per Click: 1</li>
         </ul>
