--- a/index_mobile.html
+++ b/index_mobile.html
@@ -27,7 +27,7 @@
         </ul>
     </nav>
 </header>
-<div id="clickCenter">
+<div id="clickCenter" class="noselect">
     <img id="clickPicture" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
     <div id="myProgress">
         <div id="myBar"></div>
