--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
 </header>
 <div id="clickCenter">
-    <img id="clickPicture" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
+    <img id="clickPicture" draggable="false" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
     <p id="myProgress">100%</p>
 </div>
 <div id="statsPage" class="invisible page">
