--- a/index_mobile.html
+++ b/index_mobile.html
@@ -28,7 +28,7 @@
     </nav>
 </header>
 <div id="clickCenter" class="noselect">
-    <img id="clickPicture" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
+    <img id="clickPicture" draggable="false" class="noselect" src="images/clickPicture.png" onclick="clickCoin()">
     <div id="myProgress">
         <div id="myBar"></div>
     </div>
