--- a/index.html
+++ b/index.html
@@ -22,12 +22,11 @@
     <a href="https://bytecoin.org" ondragstart="return false;"><img id="logo" src="images/favicon.png"></a>
     <div id="dayMusic">
         <p id="volume" title="Stumm/Laut" onclick="changeVolume()"><i id="volumes" class="fas fa-volume-up"></i></p>
-        <p id="dayNight" title="Nachtmodus/Tagmodus" onclick="changeDayNight()"><i id="dayNightSwitch"
-                                                                                   class="fas fa-sun"></i></p>
+        <p id="dayNight" title="Nachtmodus/Tagmodus" onclick="changeDayNight()"><i id="dayNightSwitch" class="fas fa-sun"></i></p>
     </div>
     <nav id="leftNav">
         <ul>
-            <li id="amount">ByteCoins: 0</li>
+            <li id="amount"">ByteCoins: 0</li>
             <li id="amountSecond">Coins Per Second: 0</li>
             <li id="coinsPerClick">Coins Per Click: 1</li>
         </ul>
