--- a/index_mobile.html
+++ b/index_mobile.html
@@ -56,6 +56,11 @@
         <li id="buy" class="buyMode" onclick="changeShopMode('buy')">Buy</li>
         <li id="sell" onclick="changeShopMode('sell')">Sell</li>
     </ul>
+    <ul id="amountShopModes">
+        <li id="1x" class="buyMode shopAmount" onclick="changeShopAmount(1)">1x</li>
+        <li id="5x" class="shopAmount" onclick="changeShopAmount(5)">5x</li>
+        <li id="10x" class="shopAmount" onclick="changeShopAmount(10)">10x</li>
+    </ul>
     <div class="shop">
         <ul class="shopContent">
         </ul>
